tests/snapshots/replace_mode_test__ctrl_a_insert_last_text.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
firs[a]ttest
