tests/snapshots/replace_mode_test__ctrl_d_dedent.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[d]    hello
