tests/snapshots/replace_mode_test__ctrl_p_completion_previous.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:3
Lines: 3

Buffer:
hello world hello
hel[p]
