tests/snapshots/replace_mode_test__ctrl_r_insert_register.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
tyiwir[a]est
