tests/snapshots/replace_mode_test__ctrl_t_indent.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[t]hello
