tests/snapshots/replace_mode_test__ctrl_u_delete_line.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:13
Lines: 1

Buffer:
inserted text[u]hello
