tests/snapshots/replace_mode_test__ctrl_w_delete_word.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 1

Buffer:
test [w]hello
