tests/snapshots/replace_mode_test__ctrl_x_ctrl_l_line_completion.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:1
Lines: 3

Buffer:
hello world
x[l]
